--- a/Configuration/Configuration.csproj
+++ b/Configuration/Configuration.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9738DDFF-E869-41BF-A933-427D6C6357A7}</ProjectGuid>
+    <ProjectGuid>{4882DF9C-39FA-474D-A4C0-2835B34764BC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YamDocumentManagementSystem.Core</RootNamespace>
-    <AssemblyName>YamDocumentManagementSystem.Core</AssemblyName>
+    <RootNamespace>YamDocumentManagementSystem.Configuration</RootNamespace>
+    <AssemblyName>YamDocumentManagementSystem.Configuration</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,24 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Consts.cs" />
+    <Compile Include="Data\DatabaseConnectionInfo.cs" />
+    <Compile Include="Data\DatabaseConnectionsCollection.cs" />
+    <Compile Include="Data\DatabaseConnectionsSection.cs" />
+    <Compile Include="Data\IDatabaseConnectionInfo.cs" />
+    <Compile Include="Data\IDatabaseConnectionsCollection.cs" />
+    <Compile Include="Data\IDatabaseConnectionsSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Documents\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj">
-      <Project>{b6fd407f-5001-4709-81e0-1a98e038fc46}</Project>
-      <Name>Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Helpers\Helpers.csproj">
-      <Project>{0c0d9862-1742-4805-9ecb-bba6af31eff5}</Project>
-      <Name>Helpers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Types\Types.csproj">
-      <Project>{34347d0b-42ae-4a6c-ad07-6a76487729f1}</Project>
-      <Name>Types</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
