--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9738DDFF-E869-41BF-A933-427D6C6357A7}</ProjectGuid>
+    <ProjectGuid>{0C0D9862-1742-4805-9ECB-BBA6AF31EFF5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YamDocumentManagementSystem.Core</RootNamespace>
-    <AssemblyName>YamDocumentManagementSystem.Core</AssemblyName>
+    <RootNamespace>YamDocumentManagementSystem.Helpers</RootNamespace>
+    <AssemblyName>YamDocumentManagementSystem.Helpers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DryIoc, Version=2.9.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DryIoc.dll.2.9.7\lib\net45\DryIoc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,23 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigurationHelper.cs" />
+    <Compile Include="Configuration\IConfigurationHelper.cs" />
+    <Compile Include="DependencyInjection\IModule.cs" />
+    <Compile Include="DependencyInjection\RegistratorExtensions.cs" />
+    <Compile Include="HelperModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Documents\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj">
-      <Project>{b6fd407f-5001-4709-81e0-1a98e038fc46}</Project>
-      <Name>Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Helpers\Helpers.csproj">
-      <Project>{0c0d9862-1742-4805-9ecb-bba6af31eff5}</Project>
-      <Name>Helpers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Types\Types.csproj">
-      <Project>{34347d0b-42ae-4a6c-ad07-6a76487729f1}</Project>
-      <Name>Types</Name>
+    <ProjectReference Include="..\Configuration\Configuration.csproj">
+      <Project>{4882df9c-39fa-474d-a4c0-2835b34764bc}</Project>
+      <Name>Configuration</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
